Enhance web UI with status and alert features
- Increased gap in control elements for better spacing.
- Added success and error status indicators for connection feedback.
- Implemented an alert banner for displaying error messages.
- Updated connection status handling to provide more detailed feedback.
- Improved query synchronization from input fields for better URL management.

--- a/web/index.html
+++ b/web/index.html
@@ -23,11 +23,12 @@
 		.controls {
 			display: flex;
 			align-items: center;
-			gap: 0.5rem;
+			gap: 0.75rem;
 			padding: 0.75rem 1rem;
 			background: #111;
 			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 			z-index: 1;
+			flex-wrap: wrap;
 		}
 
 		.controls form {
@@ -35,6 +36,7 @@
 			align-items: center;
 			gap: 0.5rem;
 			margin: 0;
+			flex-wrap: wrap;
 		}
 
 		.controls input {
@@ -64,6 +66,30 @@
 			min-width: 8rem;
 		}
 
+		#status.status-success {
+			color: #4caf50;
+		}
+
+		#status.status-error {
+			color: #ff6b6b;
+		}
+
+		#alert-banner {
+			font-size: 0.9rem;
+			color: #ff6b6b;
+			background: rgba(255, 107, 107, 0.15);
+			border: 1px solid rgba(255, 107, 107, 0.4);
+			padding: 0.35rem 0.6rem;
+			border-radius: 4px;
+			display: none;
+			max-width: 100%;
+		}
+
+		#alert-banner.visible {
+			display: inline-flex;
+			align-items: center;
+		}
+
 		#terminal {
 			flex: 1;
 			padding: 0.5rem;
@@ -81,6 +107,7 @@
 			<button type="submit">Connect</button>
 		</form>
 		<span id="status"></span>
+		<span id="alert-banner" role="alert"></span>
 	</div>
 	<div id="terminal"></div>
 	<script src="assets/xterm.min.js"></script>
@@ -89,6 +116,7 @@
 		(function () {
 			const terminalContainer = document.getElementById('terminal');
 			const statusEl = document.getElementById('status');
+			const alertBanner = document.getElementById('alert-banner');
 			const namespaceInput = document.getElementById('namespace');
 			const vmiInput = document.getElementById('vmi');
 			const form = document.getElementById('connect-form');
@@ -118,9 +146,45 @@
 			if (initialVMI) {
 				vmiInput.value = initialVMI;
 			}
+			namespaceInput.addEventListener('input', syncQueryFromInputs);
+			vmiInput.addEventListener('input', syncQueryFromInputs);
+			syncQueryFromInputs();
 
-			function updateStatus(text) {
+			function updateStatus(text, level, detail) {
 				statusEl.textContent = text || '';
+				statusEl.classList.remove('status-success', 'status-error');
+				if (level === 'success') {
+					statusEl.classList.add('status-success');
+				} else if (level === 'error') {
+					statusEl.classList.add('status-error');
+				}
+				const detailText = level === 'error' ? (detail ?? text) : '';
+				if (level === 'error' && detailText) {
+					alertBanner.textContent = detailText;
+					alertBanner.classList.add('visible');
+				} else if (level !== 'error') {
+					alertBanner.textContent = '';
+					alertBanner.classList.remove('visible');
+				}
+			}
+
+			function updateQuery(namespace, vmi) {
+				const params = new URLSearchParams();
+				if (namespace) {
+					params.set('namespace', namespace);
+				}
+				if (vmi) {
+					params.set('vmi', vmi);
+				}
+				const next = params.toString();
+				const nextUrl = `${window.location.pathname}${next ? `?${next}` : ''}`;
+				if (nextUrl !== window.location.pathname + window.location.search) {
+					history.replaceState(null, '', nextUrl);
+				}
+			}
+
+			function syncQueryFromInputs() {
+				updateQuery(namespaceInput.value.trim(), vmiInput.value.trim());
 			}
 
 			function closeSocket() {
@@ -142,61 +206,64 @@
 				closeSocket();
 				const loc = window.location;
 				const protocol = loc.protocol === 'https:' ? 'wss' : 'ws';
-				const endpoint = `${protocol}://${loc.host}/ws?namespace=${encodeURIComponent(namespace)}&vmi=${encodeURIComponent(vmi)}`;
-			const nsLabel = namespace ? namespace : '(default namespace)';
-			console.log('connecting to websocket', endpoint);
-			updateStatus(`Connecting to ${nsLabel}/${vmi} ...`);
+				const wsParams = new URLSearchParams();
+				if (namespace) {
+					wsParams.set('namespace', namespace);
+				}
+				wsParams.set('vmi', vmi);
+				const endpoint = `${protocol}://${loc.host}/ws?${wsParams.toString()}`;
+				const nsLabel = namespace ? namespace : '(default namespace)';
+				updateQuery(namespace, vmi);
+				console.log('connecting to websocket', endpoint);
+				updateStatus(`Connecting to ${nsLabel}/${vmi} ...`);
 				ws = new WebSocket(endpoint);
 				ws.binaryType = 'arraybuffer';
 
-				ws.onopen = function () {
-					console.log('websocket open');
-					term.clear();
-					fitAddon.fit();
-					updateStatus('Connected');
-					term.focus();
-				};
+			ws.onopen = function () {
+				console.log('websocket open');
+				term.clear();
+				fitAddon.fit();
+				updateStatus('Connected', 'success');
+				term.focus();
+			};
 
-				ws.onmessage = function (event) {
-					if (event.data instanceof ArrayBuffer) {
-						// no logging to avoid noise
+			ws.onmessage = function (event) {
+				if (event.data instanceof ArrayBuffer) {
+					term.write(decoder.decode(event.data));
+				} else if (typeof event.data === 'string') {
+					if (event.data === 'serial console ready') {
+						updateStatus('Connected', 'success');
+					} else if (event.data.startsWith('serial console error:') || event.data.startsWith('console ')) {
+						updateStatus('Console error', 'error', event.data);
+						term.writeln(`\r\n${event.data}\r\n`);
 					} else {
-						console.log('message', event.data);
+						term.write(event.data);
 					}
-					if (event.data instanceof ArrayBuffer) {
-						term.write(decoder.decode(event.data));
-					} else if (typeof event.data === 'string') {
-						if (event.data === 'serial console ready') {
-							updateStatus('Connected');
-						} else if (event.data.startsWith('serial console error:') || event.data.startsWith('console ')) {
-							updateStatus(event.data);
-						} else {
-							term.write(event.data);
-						}
-					}
-				};
+				}
+			};
 
-				ws.onerror = function (event) {
-					console.error('websocket error', event);
-					updateStatus('Connection error');
-				};
+			ws.onerror = function (event) {
+				console.error('websocket error', event);
+				updateStatus('Connection error', 'error');
+			};
 
-				ws.onclose = function (event) {
-					console.log('websocket closed', event);
-					updateStatus(event.wasClean ? 'Connection closed' : 'Connection lost');
-				};
+			ws.onclose = function (event) {
+				console.log('websocket closed', event);
+				const statusText = event.wasClean ? 'Connection closed' : 'Connection lost';
+				updateStatus(statusText, event.wasClean ? undefined : 'error');
+			};
 			}
 
 			form.addEventListener('submit', function (event) {
 				event.preventDefault();
-			const ns = namespaceInput.value.trim();
-			const vmi = vmiInput.value.trim();
-			if (!vmi) {
-				updateStatus('VMI is required');
-				return;
-			}
-			connect(ns, vmi);
-		});
+				const ns = namespaceInput.value.trim();
+				const vmi = vmiInput.value.trim();
+				if (!vmi) {
+					updateStatus('VMI is required', 'error');
+					return;
+				}
+				connect(ns, vmi);
+			});
 
 			term.onData(function (data) {
 				if (ws && ws.readyState === WebSocket.OPEN) {
@@ -208,15 +275,16 @@
 				fitAddon.fit();
 			});
 
-	if (initialVMI) {
-		if (!initialNamespace && !namespaceInput.value) {
-			updateStatus('Using kubeconfig namespace');
+			if (initialVMI) {
+				if (!initialNamespace && !namespaceInput.value) {
+					updateStatus('Using kubeconfig namespace');
+				}
+				console.log('auto-connecting using URL parameters');
+				updateStatus('Preparing connection ...');
+				connect(initialNamespace || namespaceInput.value, initialVMI);
+			}
 		}
-		console.log('auto-connecting using URL parameters');
-		updateStatus('Preparing connection ...');
-		connect(initialNamespace || namespaceInput.value, initialVMI);
-	}
-})();
+	)();
 	</script>
 </body>
 
